java 8 support was dropped, so this can be better.